--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,18 @@
     <string name="loginGoRegister">Kayıt Ol</string>
     <string name="registerConfirmPassword">Parola Onay</string>
     <string name="registerBtn">Kayıt Ol</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="title_profile">Profil</string>
+    <string name="title_add">Ekle</string>
+    <string name="title_following">Takip</string>
+    <string name="title_search">Ara</string>
+    <string name="title_like">Beğeni</string>
+
+    <string name="title_notifications">Notifications</string>
+    <string name="title_activity_register">RegisterActivity</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_profile">ProfileActivity</string>
+    <string name="title_activity_user_profile">UserProfileActivity</string>
 </resources>
