Anket düzenleme ve Arama sayfası

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,6 +82,8 @@
         <item>5 gün</item>
         <item>7 gün</item>
     </string-array>
+    <string name="title_activity_main2">Main2Activity</string>
+    <string name="title_dashboard">Dashboard</string>
 
 
 </resources>
