--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
     <string name="editEmail">Eposta</string>
     <string name="editPhone">Telefon</string>
     <string name="editButton">GÜNCELLE</string>
+    <string name="editOpen">Hesabınız açık</string>
 
     <!-- Ara -->
     <string name="searchHint">Ara</string>
@@ -82,7 +83,13 @@
         <item>5 gün</item>
         <item>7 gün</item>
     </string-array>
+    <string name="setText">Kayıt yapılıyor, Lütfen bekleyin.</string>
+
+
     <string name="title_dashboard">Dashboard</string>
+    <string name="default_notification_channel_id">Sence</string>
+    <string name="message">Bir arkadaşlık isteğiniz var.</string>
+
 
 
 </resources>
