--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,8 +74,8 @@
         <item>Ev-Yaşam</item>
         <item>Anne-Bebek</item>
         <item>Spor</item>
-        <item>Kitap,Müzik,Film,Oyun</item>
-        <item>Tatil,Eğlence</item>
+        <item>Kitap-Müzik-Film-Oyun</item>
+        <item>Tatil-Eğlence</item>
         <item>Otomobil-Motorsiklet</item>
         <item>Diğer</item>
     </string-array>
